# serializer version: 1
# name: test_all_binary_sensor_entities.10
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'bluetooth',
        '00:11:22:33:44:55',
      ),
      tuple(
        'mac',
        '00:11:22:33:44:55',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'intelliclima',
        '56789',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Fantini Cosmi',
    'model': 'ECOCOMFORT 2.0',
    'model_id': None,
    'name': 'Test VMC',
    'name_by_user': None,
    'serial_number': '11223344',
    'sw_version': '0.6.8',
    'via_device_id': None,
  })
# ---
# name: test_all_binary_sensor_entities.11
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'bluetooth',
        '00:11:22:33:44:55',
      ),
      tuple(
        'mac',
        '00:11:22:33:44:55',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'intelliclima',
        '56789',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Fantini Cosmi',
    'model': 'ECOCOMFORT 2.0',
    'model_id': None,
    'name': 'Test VMC',
    'name_by_user': None,
    'serial_number': '11223344',
    'sw_version': '0.6.8',
    'via_device_id': None,
  })
# ---
# name: test_all_binary_sensor_entities.12
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'bluetooth',
        '00:11:22:33:44:55',
      ),
      tuple(
        'mac',
        '00:11:22:33:44:55',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'intelliclima',
        '56789',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Fantini Cosmi',
    'model': 'ECOCOMFORT 2.0',
    'model_id': None,
    'name': 'Test VMC',
    'name_by_user': None,
    'serial_number': '11223344',
    'sw_version': '0.6.8',
    'via_device_id': None,
  })
# ---
# name: test_all_binary_sensor_entities.13
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'bluetooth',
        '00:11:22:33:44:55',
      ),
      tuple(
        'mac',
        '00:11:22:33:44:55',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'intelliclima',
        '56789',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Fantini Cosmi',
    'model': 'ECOCOMFORT 2.0',
    'model_id': None,
    'name': 'Test VMC',
    'name_by_user': None,
    'serial_number': '11223344',
    'sw_version': '0.6.8',
    'via_device_id': None,
  })
# ---
# name: test_all_binary_sensor_entities.14
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'bluetooth',
        '00:11:22:33:44:55',
      ),
      tuple(
        'mac',
        '00:11:22:33:44:55',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'intelliclima',
        '56789',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Fantini Cosmi',
    'model': 'ECOCOMFORT 2.0',
    'model_id': None,
    'name': 'Test VMC',
    'name_by_user': None,
    'serial_number': '11223344',
    'sw_version': '0.6.8',
    'via_device_id': None,
  })
# ---
# name: test_all_binary_sensor_entities[binary_sensor.test_vmc_advanced_control-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.test_vmc_advanced_control',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Advanced control',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Advanced control',
    'platform': 'intelliclima',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'advanced',
    'unique_id': '56789_advanced',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensor_entities[binary_sensor.test_vmc_advanced_control-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test VMC Advanced control',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_vmc_advanced_control',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensor_entities[binary_sensor.test_vmc_automatic_speed_control-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.test_vmc_automatic_speed_control',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Automatic speed control',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Automatic speed control',
    'platform': 'intelliclima',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'profiled',
    'unique_id': '56789_profiled',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensor_entities[binary_sensor.test_vmc_automatic_speed_control-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test VMC Automatic speed control',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_vmc_automatic_speed_control',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensor_entities[binary_sensor.test_vmc_boost-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.test_vmc_boost',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Boost',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Boost',
    'platform': 'intelliclima',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'boost',
    'unique_id': '56789_boost',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensor_entities[binary_sensor.test_vmc_boost-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test VMC Boost',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_vmc_boost',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensor_entities[binary_sensor.test_vmc_filter_cleaning_required-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.test_vmc_filter_cleaning_required',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Filter cleaning required',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Filter cleaning required',
    'platform': 'intelliclima',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filter_cleaning',
    'unique_id': '56789_filter_cleaning',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensor_entities[binary_sensor.test_vmc_filter_cleaning_required-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test VMC Filter cleaning required',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_vmc_filter_cleaning_required',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_binary_sensor_entities[binary_sensor.test_vmc_night_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.test_vmc_night_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Night mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Night mode',
    'platform': 'intelliclima',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'night',
    'unique_id': '56789_night',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensor_entities[binary_sensor.test_vmc_night_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test VMC Night mode',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_vmc_night_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
